quon_na/tests/snapshots/stats_snapshots__zoned_routing_agnostic.snap
---
source: quon_na/tests/stats_snapshots.rs
expression: redact_timings(&json)
---
{
  "config": {
    "backend": "zoned",
    "compaction": {
      "applied": true,
      "greedy": true,
      "legality_checked": false,
      "requested": true
    },
    "cost_model": {
      "idle_time_weight": 1e-6,
      "movement_time_weight": 1.0,
      "rydberg_stage_weight": 1.0,
      "trap_transfer_weight": 1.0
    },
    "objective": "time",
    "placer_mode": "routing_agnostic"
  },
  "kind": "na_compiler_stats",
  "schema_version": 1,
  "search": {
    "agnostic_placer_mechanism": "greedy_fallback",
    "aware_search_budget_exceeded_layers": 0,
    "aware_search_completed_layers": 0,
    "aware_search_deepening_factor": 0.6,
    "aware_search_deepening_value": 0.2,
    "aware_search_no_legal_assignment_layers": 0,
    "aware_search_node_budget": 100000,
    "aware_search_node_expansions": 0,
    "aware_search_pruning_window": 32
  },
  "stage_timings_us": {
    "compaction_us": "<redacted_us>",
    "entangling_layers_us": "<redacted_us>",
    "resource_report_us": "<redacted_us>",
    "schedule_from_graph_us": "<redacted_us>",
    "total_us": "<redacted_us>",
    "zoned_schedule_us": "<redacted_us>"
  },
  "version": {
    "quon_na_version": "0.3.0"
  }
}
