quon_na/tests/snapshots/stats_snapshots__zoned_routing_aware_config_only.snap
---
source: quon_na/tests/stats_snapshots.rs
expression: redact_timings(&json)
---
{
  "config": {
    "backend": "zoned",
    "compaction": {
      "applied": true,
      "greedy": true,
      "legality_checked": false,
      "requested": true
    },
    "objective": "time",
    "placer_mode": "routing_aware"
  },
  "kind": "na_compiler_stats",
  "schema_version": 1,
  "search": {
    "aware_search_budget_exceeded_layers": 0,
    "aware_search_completed_layers": 5,
    "aware_search_deepening_factor": 0.6,
    "aware_search_deepening_value": 0.2,
    "aware_search_no_legal_assignment_layers": 0,
    "aware_search_node_budget": 100000,
    "aware_search_node_expansions": 74,
    "aware_search_pruning_window": 32
  },
  "stage_timings_us": {
    "compaction_us": "<redacted_us>",
    "entangling_layers_us": "<redacted_us>",
    "resource_report_us": "<redacted_us>",
    "schedule_from_graph_us": "<redacted_us>",
    "total_us": "<redacted_us>",
    "zoned_schedule_us": "<redacted_us>"
  },
  "version": {
    "quon_na_version": "0.3.0"
  }
}
